Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54709

QML Camera module dead locks on Android

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.2
    • 5.2.0
    • Multimedia
    • None
    • Android Virtual Device: Android 5.0.1 / Google APIs Intel Atom (x86)
      Smartphone CAT B15Q (Android 4.4)
    • 95e1012c9dc49e0afbed52d17ff32a4a59a723f7

    Description

      I have used QCamera, based on QML example given in documentation (http://doc.qt.io/qt-5/qml-qtmultimedia-camera.html).

      I removed the video part which isn't relevant for my needs. I add on onImageSaved() event call to a QObject class which generates a compressed image (in RAM).

      I have made some basic tests, and all seems to work well. But, if I take about 5 pictures, the app stops working (deadlock).
      And after that, the Camera sensor is locked, event the standard Android Camera App cannot start and display an error message "Unfortunately, Camera has stopped.".
      The only way to get out of this situation is to restart the device.
      I've got the same issue on emulator (API level 21) and on "real" device (API Level 19).

      On smartphone, the lock seems to be release when I reboot it, because I can hear the typical sound emitted when taking a picture.

      This issue is very easy to reproduce on emulator (just take 5 Pictures) but more spuriously on my smartphone.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            kromignon Fabrice Mousset
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes