Android: fix freeze when taking pictures on some devices

On some devices and on the emulator, the preview callback must be
cleared before taking a picture to avoid a camera server freeze.

Task-number: QTBUG-54709
Change-Id: I9e4ad417fa08cddea7edfd232f5b5df40ada59ee
Reviewed-by: Christian Stromme <christian.stromme@qt.io>